--- a/templates/libvirtd.conf.j2
+++ b/templates/libvirtd.conf.j2
@@ -88,7 +88,7 @@ mdns_name = "{{ libvirt_libvirtd_mdns_name }}"
 # without becoming root.
 #
 # This is restricted to 'root' by default.
-unix_sock_group = "libvirtd"
+unix_sock_group = "{{ libvirt_libvirtd_group }}"
 
 # Set the UNIX socket permissions for the R/O socket. This is used
 # for monitoring VM status only
