--- a/templates/libvirtd.conf.j2
+++ b/templates/libvirtd.conf.j2
@@ -95,7 +95,7 @@ unix_sock_group = "{{ libvirt_libvirtd_group }}"
 #
 # Default allows any user. If setting group ownership, you may want to
 # restrict this too.
-unix_sock_ro_perms = "0777"
+unix_sock_ro_perms = "{{ libvirt_libvirtd_unix_sock_ro_perms }}"
 
 # Set the UNIX socket permissions for the R/W socket. This is used
 # for full management of VMs
@@ -105,7 +105,7 @@ unix_sock_ro_perms = "0777"
 #
 # If not using PolicyKit and setting group ownership for access
 # control, then you may want to relax this too.
-unix_sock_rw_perms = "0770"
+unix_sock_rw_perms = "{{ libvirt_libvirtd_unix_sock_rw_perms }}"
 
 # Set the name of the directory in which sockets will be found/created.
 #unix_sock_dir = "/var/run/libvirt"
